# obs-studio

UI/: api-interface.cpp  window-basic-main.cpp
UI/frontend-plugins/frontend-tools/: CMakeLists.txt  auto-scene-switcher-osx.mm  auto-scene-switcher.cpp  auto-scene-switcher.hpp
UI/frontend-plugins/frontend-tools/forms/: auto-scene-switcher.ui
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
